--- a/teste.html
+++ b/teste.html
@@ -46,7 +46,7 @@ Tentei deixar o código mais limpo o possível
 		<div class="header" id="trocar_resolucao_mobile2">
 
 			<div class="logo_ingresso" >
-				<img src="C:/Users/T-Gamer/Documents/ingresso.com/logo-ingresso-horizontal.png" id="ajuste_logo" >
+				<img src="./img/03.png" id="ajuste_logo" >
 			</div>
 		</div>
 
