--- a/teste.html
+++ b/teste.html
@@ -35,6 +35,10 @@ Usei JS e Media Querie para mostrar dominio exatamente no JS e no CSS.
 
 Tentei deixar o código mais limpo o possível
 
+
+*Pessoal, percebi que o chrome funciona diferente com  código de responsividade, 
+media queries e js que eu criei,  recomendo abrir  o projeto com o navegador opera.*
+
  -->
 
 </head>
